# assessment_ws

./: .gitignore
bernard/: README.md
bernard/src/tb3_controller/: package.xml  setup.py
bernard/src/tb3_controller/tb3_controller/: move_to_pose_node.py
bernard/src/tb3_interfaces/: CMakeLists.txt  package.xml
caleb/: README.md
caleb/src/: pose_controller_node.py
caleb/src/controller/: CMakeLists.txt  README.md  package.xml
caleb/src/controller/scripts/: pose_controller_node.py
clerita/: README.md
clerita/src/pose_controller_interface/: CMakeLists.txt  package.xml
clerita/src/turtlebot3_pose_controller/: package.xml  setup.cfg  setup.py
clerita/src/turtlebot3_pose_controller/turtlebot3_pose_controller/: pose_controller.py
elikplim/src/pose_interface/: CMakeLists.txt  package.xml
elikplim/src/pose_interface/srv/: GoToPose.srv
elikplim/src/turtlebot_pose_controller/: package.xml  setup.cfg  setup.py
elikplim/src/turtlebot_pose_controller/launch/: pose_controller.launch.py
elikplim/src/turtlebot_pose_controller/turtlebot_pose_controller/: pose_controller_node.py
louis/: README.md
louis/src/posecommand_msgs/: CMakeLists.txt  package.xml
louis/src/turtlebot3_example/: package.xml  setup.py
louis/src/turtlebot3_example/turtlebot3_example/: turtlebot3_goal_service.py
rene/src/pose_controller/: setup.py
rene/src/pose_controller/launch/: tb3_pose_control.launch.py
