<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtlebot3_example</name>
  <version>2.3.7</version>
  <description>
    This package provides four basic examples for TurtleBot3 (i.e., interactive marker, object detection, patrol and position control).
  </description>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <license>Apache License, Version 2.0</license>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>turtlebot3_msgs</depend>
  <depend>tf_transformations</depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
